@@ -1,3 +1,8 @@
+2008-03-12  Alexander Larsson  <alexl@redhat.com>
+
+        * POTFILES.in:
+	Added gvfsbackenddaemon.c
+
 2008-03-10  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Updated French translation.
